test/negative/ArrayParameterSuffix.java
public class ArrayParameterSuffix {
    public ArrayParameterSuffix() {
    }

    public void f(int x[]) {
    }
}
